Update Objetos Lab T.I..ipynb

--- a/Polítropa_Maestra/Objetos Lab T.I..ipynb
+++ b/Polítropa_Maestra/Objetos Lab T.I..ipynb
@@ -37,7 +37,7 @@
     "\n",
     "## Ecuaciones de estructura\n",
     "\n",
-    "Las ecuaciones de estructura son el resultado de resolver las ecuaciones de campo de Einstein para una métrica y un tensor de energía dado. En el caso de configuraciones estáticas con simetría esférica y anisotropía en la presión, las ecuaciones de estructura consisten en\n",
+    "Las ecuaciones de estructura son el resultado de resolver y manipular las ecuaciones de campo de Einstein para una métrica y un tensor de energía dado. En el caso de configuraciones estáticas con simetría esférica y anisotropía en la presión, las ecuaciones de estructura consisten en\n",
     "\n",
     "\\begin{equation}\n",
     "\\label{EcEqHidro}\n",
