--- a/Polítropa_Maestra/Modelos (Masa total y Radio total).ipynb
+++ b/Polítropa_Maestra/Modelos (Masa total y Radio total).ipynb
@@ -39,12 +39,12 @@
     "\n",
     "Las ecuaciones de estructura son el resultado de manipular las ecuaciones de campo de Einstein para una métrica y un tensor de energía dado. Son las ecuaciones que hay que resolver para modelar objetos compactos. En el caso de configuraciones estáticas con simetría esférica y anisotropía en la presión, las ecuaciones de estructura consisten en\n",
     "\n",
-    "\\begin{eqnarray}\n",
+    "\\begin{eqnarray*}\n",
     "\\begin{cases}\n",
     "P^{\\prime} &=& - \\left(\\rho + P \\right) \\frac{m + 4 \\pi r^{3} P}{r(r - 2m)} + \\frac{2}{r} \\left(P_{\\perp} - P \\right) \\hspace{4cm} (1)\\\\\n",
     "m^{\\prime} &=& 4 \\pi r^{2} \\rho  \\hspace{8.65cm} (2)\n",
     "\\end{cases}\n",
-    "\\end{eqnarray}\n",
+    "\\end{eqnarray*}\n",
     "donde $\\rho$ es densidad de energía, $m$ es masa, $P$ es presión radial, $P_{\\perp}$ es presión tangencial y la prima denota derivada respecto a $r$.\n",
     "\n",
     "## Ecuación de Estado\n",
