--- a/Polítropa_Maestra/Modelos (Masa total y Radio total).ipynb
+++ b/Polítropa_Maestra/Modelos (Masa total y Radio total).ipynb
@@ -40,10 +40,8 @@
     "Las ecuaciones de estructura son el resultado de manipular las ecuaciones de campo de Einstein para una métrica y un tensor de energía dado. Son las ecuaciones que hay que resolver para modelar objetos compactos. En el caso de configuraciones estáticas con simetría esférica y anisotropía en la presión, las ecuaciones de estructura consisten en\n",
     "\n",
     "\\begin{eqnarray*}\n",
-    "\\begin{cases}\n",
-    "P^{\\prime} &=& - \\left(\\rho + P \\right) \\frac{m + 4 \\pi r^{3} P}{r(r - 2m)} + \\frac{2}{r} \\left(P_{\\perp} - P \\right) \\hspace{4cm} (1)\\\\\n",
-    "m^{\\prime} &=& 4 \\pi r^{2} \\rho  \\hspace{8.65cm} (2)\n",
-    "\\end{cases}\n",
+    "P^{\\prime} &=& - \\left(\\rho + P \\right) \\frac{m + 4 \\pi r^{3} P}{r(r - 2m)} + \\frac{2}{r} \\left(P_{\\perp} - P \\right)  \\label{EqHid} \\tag{1} \\\\\n",
+    "m^{\\prime} &=& 4 \\pi r^{2} \\rho \\label{MasDif} \\tag{2}\n",
     "\\end{eqnarray*}\n",
     "donde $\\rho$ es densidad de energía, $m$ es masa, $P$ es presión radial, $P_{\\perp}$ es presión tangencial y la prima denota derivada respecto a $r$.\n",
     "\n",
@@ -53,16 +51,16 @@
     "\n",
     "La EoS polítropa maestra consiste en una relación tal que\n",
     "\\begin{equation}\n",
-    "P = \\kappa \\rho^{1+\\frac{1}{n}} + \\alpha \\rho - \\beta \\,. \\hspace{7.2cm} (3)\n",
+    "P = \\kappa \\rho^{1+\\frac{1}{n}} + \\alpha \\rho - \\beta \\,. \\label{PoliMaestra} \\tag{3}\n",
     "\\end{equation}\n",
     "\n",
     "Por otra parte, se supone que la anisotropía de la presión es de la forma\n",
     "\\begin{equation}\n",
-    "\\Delta\\equiv P_{\\perp} - P = C r (\\rho + P) \\frac{m + 4 \\pi r^3 P}{r(r-2m)} \\,, \\hspace{4.1cm} (4)\n",
+    "\\Delta\\equiv P_{\\perp} - P = C r (\\rho + P) \\frac{m + 4 \\pi r^3 P}{r(r-2m)} \\,, \\label{Anisotropia} \\tag{4}\n",
     "\\end{equation}\n",
     "tal que la ecuación (1) queda como\n",
     "\\begin{equation}\n",
-    "\\frac{\\mathrm{d}P}{\\mathrm{d}r} = - h \\frac{(\\rho + P)(m + 4 \\pi  r^3 P)}{r(r-2m)} \\,, \\hspace{5.3cm} (5)\n",
+    "\\frac{\\mathrm{d}P}{\\mathrm{d}r} = - h \\frac{(\\rho + P)(m + 4 \\pi  r^3 P)}{r(r-2m)} \\,, \\label{EqHidCos} \\tag{5}\n",
     "\\end{equation}\n",
     "donde $h = 1 - 2C$, y $C$ cuantifica la anisotropía en el modelo.\n",
     "\n",
@@ -78,18 +76,18 @@
     "\\end{equation}\n",
     "Los subíndices $c$ y $b$ indican que la variable es evaluada en el centro y borde de la configuración, respectivamente.\n",
     "\n",
-    "De esta manera, las EoS (3) y (4) adimensionales son\n",
+    "De esta manera, las EoS $\\eqref{PoliMaestra}$ y $\\eqref{Anisotropia}$ adimensionales son\n",
     "\\begin{eqnarray}\n",
-    "P &=& \\rho_c \\left\\{\\Upsilon \\left( \\Psi^{n+1} - \\varkappa^{1 + \\frac{1}{n}} \\right) + \\alpha \\left(\\Psi^{n} - \\varkappa \\right)\\right\\}  = \\rho_c \\mathcal{P} \\quad \\textrm{y} \\hspace{2cm} (6) \\\\\n",
-    "\\Delta &=& \\frac{C \\Upsilon (n+1) \\left(\\eta + \\xi^{3} \\mathcal{P} \\right) \\left(\\Psi^{n} + \\mathcal{P} \\right) \\rho_{c}}{\\xi - 2  \\Upsilon \\left( n+1 \\right) \\eta} \\,, \\hspace{4.4cm}  (7)\n",
+    "P &=& \\rho_c \\left\\{\\Upsilon \\left( \\Psi^{n+1} - \\varkappa^{1 + \\frac{1}{n}} \\right) + \\alpha \\left(\\Psi^{n} - \\varkappa \\right)\\right\\}  = \\rho_c \\mathcal{P} \\quad \\textrm{y} \\label{PAdi} \\tag{6} \\\\\n",
+    "\\Delta &=& \\frac{C \\Upsilon (n+1) \\left(\\eta + \\xi^{3} \\mathcal{P} \\right) \\left(\\Psi^{n} + \\mathcal{P} \\right) \\rho_{c}}{\\xi - 2  \\Upsilon \\left( n+1 \\right) \\eta} \\,, \\label{AniAdi} \\tag{7}\n",
     "\\end{eqnarray}\n",
     "respectivamente.\n",
     "\n",
     "\n",
-    "Finalmente, las ecuaciones (5) y (2), escritas en su forma adimensional, son\n",
+    "Finalmente, las ecuaciones $\\eqref{EqHidCos}$ y $\\eqref{MasDif}$, escritas en su forma adimensional, son\n",
     "\\begin{eqnarray}\n",
-    "\\dot{\\Psi} &=& - \\frac{h \\left(\\eta + \\xi^{3} \\mathcal{P}\\right) \\left(1 + \\frac{\\mathcal{P}}{\\Psi^{n}}\\right)}{\\xi \\left\\{\\xi-2\\,\\Upsilon\\,\\left( n+1 \\right) \\eta\\right\\} \\left\\{1 + \\frac{\\alpha n}{\\Upsilon \\left(n+1\\right) \\Psi}\\right\\}}  \\qquad \\textrm{y} \\hspace{2.8cm} (8)\\\\\n",
-    "\\dot{\\eta} &=& \\xi^{2}\\Psi^{n} \\,, \\hspace{10.1cm} (9)\n",
+    "\\dot{\\Psi} &=& - \\frac{h \\left(\\eta + \\xi^{3} \\mathcal{P}\\right) \\left(1 + \\frac{\\mathcal{P}}{\\Psi^{n}}\\right)}{\\xi \\left\\{\\xi-2\\,\\Upsilon\\,\\left( n+1 \\right) \\eta\\right\\} \\left\\{1 + \\frac{\\alpha n}{\\Upsilon \\left(n+1\\right) \\Psi}\\right\\}}  \\qquad \\textrm{y} \\label{PsiPunto} \\tag{8} \\\\\n",
+    "\\dot{\\eta} &=& \\xi^{2}\\Psi^{n} \\,, \\label{EtaPunto} \\tag{9}\n",
     "\\end{eqnarray}\n",
     "donde el punto indica derivada respecto de $\\xi$.\n",
     "\n",
