Update Modelos (Masa total y Radio total).ipynb

--- a/Polítropa_Maestra/Modelos (Masa total y Radio total).ipynb
+++ b/Polítropa_Maestra/Modelos (Masa total y Radio total).ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Masa total y Radio total de modelos con polítropa maestra\n",
+    "\n",
+    "Este código calcula la masa total ($M$), el radio total ($r_b$) y la compacidad ($\\mu_b$) de esferas anisótropas relativistas con ecuación de estado polítropa maestra."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -31,13 +40,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Masa total y Radio total de modelos con polítropa maestra\n",
-    "\n",
-    "Este código calcula la masa total ($M$), el radio total ($r_b$) y la compacidad ($\\mu_b$) de esferas anisótropas relativistas con ecuación de estado polítropa maestra.\n",
+    "# Modelado de objetos compactos\n",
     "\n",
     "## Ecuaciones de estructura\n",
     "\n",
-    "Las ecuaciones de estructura son el resultado de manipular las ecuaciones de campo de Einstein para una métrica y un tensor de energía dado. Son las ecuaciones que hay que resolver para modelar objetos compactos. En el caso de configuraciones estáticas con simetría esférica y anisotropía en la presión, las ecuaciones de estructura consisten en\n",
+    "Las ecuaciones de estructura son el resultado de manipular las ecuaciones de campo de Einstein para una métrica y un tensor de energía dado, y son las ecuaciones que hay que resolver para modelar objetos compactos. En el caso de configuraciones estáticas con simetría esférica y anisotropía en la presión, las ecuaciones de estructura consisten en\n",
     "\n",
     "\\begin{eqnarray}\n",
     "P^{\\prime} &=& - \\left(\\rho + P \\right) \\frac{m + 4 \\pi r^{3} P}{r(r - 2m)} + \\frac{2}{r} \\left(P_{\\perp} - P \\right)  \\label{EqHid} \\tag{1} \\\\\n",
@@ -54,7 +61,7 @@
     "P = \\kappa \\rho^{1+\\frac{1}{n}} + \\alpha \\rho - \\beta \\,. \\label{PoliMaestra} \\tag{3}\n",
     "\\end{equation}\n",
     "\n",
-    "Por otra parte, se supone que la anisotropía de la presión es de la forma\n",
+    "Por otra parte, se supone que la anisotropía en la presión es de la forma\n",
     "\\begin{equation}\n",
     "\\Delta\\equiv P_{\\perp} - P = C r (\\rho + P) \\frac{m + 4 \\pi r^3 P}{r(r-2m)} \\,, \\label{Anisotropia} \\tag{4}\n",
     "\\end{equation}\n",
@@ -107,13 +114,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definiendo sistema de ecuaciones: derivada de \\Psi, derivada de \\Eta, segunda derivada de \\Psi y segunda derivada de \\eta.\n",
+    "# Definiendo sistema de ecuaciones: derivada de \\Psi y derivada de \\Eta en función de \\xi\n",
     "def funciones(xi,y, alpha, n, h, Upsilon, varkappa):\n",
-    "    psi_ , eta_, psi1_, eta1_ = y\n",
-    "    dydxi = [-h*(eta_+ xi**(3)*(Upsilon*(psi_**(n+1) - varkappa**(1 + 1/n)) + alpha*(psi_**(n) - varkappa)))*(1 + Upsilon*(psi_ - (varkappa**(1 + 1/n)/psi_**(n))) + alpha*(1 - (varkappa/psi_**(n))))/xi/(xi - 2*Upsilon*(n+1)*eta_) /(1 + alpha*n/Upsilon/(n+1)/psi_) \n",
-    "            ,xi**(2) * psi_**(n)\n",
-    "            ,-(h/xi/(xi - 2*Upsilon*(n+1)*eta_)/(1 + alpha*n/Upsilon/(n+1)/psi_))*((eta1_ + 3*xi**(2)*(Upsilon*(psi_**(n+1) - varkappa**(1 + 1/n)) + alpha*(psi_**(n) - varkappa)) + xi**(3)*(n+1)*Upsilon*psi_**(n)*psi1_*(1 + alpha*n/Upsilon/(n+1)/psi_))*(1 + Upsilon*(psi_ - varkappa**(1 + 1/n)/psi_**(n)) + alpha*(1 - varkappa/psi_**(n))) + (eta_ + xi**(3)*(Upsilon*(psi_**(n+1) - varkappa**(1+ 1/n)) + alpha*(psi_**(n) - varkappa)))*((n+1)*Upsilon*psi1_*(1 + alpha*n/Upsilon/(n+1)/psi_) - n*(Upsilon*(psi_**(n+1) - varkappa**(1 + 1/n)) + alpha*(psi_**(n) - varkappa))*psi1_/psi_**(n+1)) + (eta_ + xi**(3)*(Upsilon*(psi_**(n+1) - varkappa**(1 + 1/n)) + alpha*(psi_**(n) - varkappa)))*(1 + Upsilon*(psi_ - varkappa**(1 + 1/n)/psi_**(n)) + alpha*(1 - varkappa/psi_**(n)))*((2*Upsilon*(n+1)*eta1_ - 1)/(xi - 2*Upsilon*(n+1)*eta_) + alpha*n*psi1_/(1 + alpha*n/Upsilon/(n+1)/psi_)/Upsilon/(n+1)/psi_**(2) - 1/xi))\n",
-    "            ,2*xi*psi_**(n) + n*xi**(2)*psi_**(n-1)*psi1_] \n",
+    "    psi_ , eta_ = y\n",
+    "    dydxi = [-h*(eta_ + xi**(3)*(Upsilon*(psi_**(n+1)-varkappa**(1+1/n)) + alpha*(psi_**(n) - varkappa)))*(1 + Upsilon*(psi_ - (varkappa**(1+1/n)/psi_**(n))) + alpha*(1 - (varkappa/psi_**(n))))/xi/(xi - 2*Upsilon*(n+1)*eta_) /(1 + alpha*n/Upsilon/(n+1)/psi_) \n",
+    "            ,xi**(2)*psi_**(n)] \n",
     "    return dydxi"
    ]
   },
@@ -125,7 +130,7 @@
    "source": [
     "c = 2.997*10**(8)          # Velocidad de la luz en unidades S.I.\n",
     "G = 6.673*10**(-11)        # Constante de gravitación universal en unidades S.I.\n",
-    "Msun = 1.989*10**(30)      # Masa solar en kilogramos"
+    "Msun = 1.989*10**(30)      # 1 Masa solar en kilogramos"
    ]
   },
   {
@@ -146,19 +151,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "C = 0.05 # Valor del factor de anisotropía\n",
-    "\n",
-    "h = 1 - 2*C  \n",
+    "# Se definen los parámetros (de entrada) que caracterizan a cada modelo: n, C, alpha, varkappa,\n",
+    "# sigma y densidad central.\n",
     "\n",
     "n = 0.8 # Índice polítropo\n",
     "\n",
-    "rho_c = 1.5*10**(18) # Valor de densidad central\n",
+    "C = 0.05 # Valor del factor de anisotropía\n",
+    "\n",
+    "h = 1 - 2*C  \n",
     "\n",
     "alpha = -0.01 # valor del factor del término lineal\n",
     "\n",
     "varkappa = 0.2 # Razón entre densidad en el borde y densidad central\n",
     "\n",
-    "sigma = 0.2 # Presión central entre densidad central\n"
+    "sigma = 0.2 # Presión central entre densidad central\n",
+    "\n",
+    "rho_c = 1.5*10**(18) # Valor de densidad central\n",
+    "\n",
+    "# Cálculo de Upsilon\n",
+    "Upsilon = (sigma - alpha*(1 - varkappa))/(1 - varkappa**(1 + 1/n)) \n",
+    "\n",
+    "# Cálculo de kappa en función de Upsilon y densidad central\n",
+    "K = Upsilon*c**(2)/rho_c**(1/n)      # k**(n) en m**(3)/kg"
    ]
   },
   {
@@ -167,62 +181,38 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\DANIEL\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:4: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  after removing the cwd from sys.path.\n",
-      "C:\\Users\\DANIEL\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:5: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  \"\"\"\n",
-      "C:\\Users\\DANIEL\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  \n",
-      "C:\\Users\\DANIEL\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:7: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  import sys\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Cálculo de \\Upsilon\n",
-    "Upsilon = (sigma - alpha*(1 - varkappa))/(1 - varkappa**(1 + 1/n)) \n",
-    "\n",
-    "# Cálculo de kappa en función de \\Upsilon y densidad central\n",
-    "K = Upsilon*c**(2)/rho_c**(1/n)      # k**(n) en m**(3)/kg\n",
-    "    \n",
     "# Condiciones iniciales\n",
     "Psi0 = 1.0\n",
     "Eta0 = 0.0\n",
-    "Psi10 = 0.0\n",
-    "Eta10 = 0.0\n",
-    "y0 = [Psi0,Eta0,Psi10,Eta10]\n",
+    "y0 = [Psi0,Eta0]\n",
+    "\n",
+    "# Intervalo de integración\n",
+    "xi0 = 10**(-15) # Inicio\n",
+    "ximax = 1000   # Fin, en caso de que la condición para detener la integración no se cumpla\n",
+    "xi_span = (xi0,ximax) # Espacio de integración\n",
     "\n",
     "# Condición para detener la integración (Presión adimensional menor que 10**(-15))\n",
     "def stop_condition(xi,y,alpha, n, h, Upsilon, varkappa):\n",
     "    return (1/sigma)*(Upsilon*(y[0]**(n+1) - varkappa**(1 + 1/n)) + alpha*(y[0]**(n) - varkappa)) - 10**-15\n",
     "stop_condition.terminal = True\n",
     "\n",
-    "# Intervalo de integración\n",
-    "xi0 = 10**(-15) # Inicio\n",
-    "ximax = 1000   # Fin, en caso de que la condición para detener la integración no se cumpla\n",
-    "xi_span = (xi0,ximax)\n",
-    "\n",
     "# Solución del sistema de ecuaciones utilizando la rutina \"solve_ivp\" por medio del método RK45\n",
+    "# solve_ivp(Ecuaciones a integrar, Espacio de integración, Condiciones iniciales, Método de integración,\n",
+    "#           Condición para detener la integración)\n",
     "soluciones = solve_ivp(funciones,xi_span,y0,method='RK45',events=stop_condition,\n",
     "                       args=(alpha, n, h, Upsilon, varkappa))\n",
-    "\n",
+    "xi = soluciones.t \n",
     "Psi = soluciones.y[0]\n",
-    "Eta = soluciones.y[1]\n",
-    "Psi1 = soluciones.y[2]\n",
-    "Eta1 = soluciones.y[3]\n",
-    "xi = soluciones.t "
+    "Eta = soluciones.y[1]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La masa total, el radio total y la compacidad en el borde están dados por\n",
+    "La masa total (en unidad de masa solar), el radio total (en kilómetros) y la compacidad en el borde están dados por\n",
     "\\begin{equation}\n",
     "M = \\left\\{\\frac{c^{2}(n+1)}{(4 \\pi)^{\\frac{1}{3}} G} \\right\\}^{\\frac{3}{2}} \\left(\\frac{K}{c^{2}} \\right)^{\\frac{n}{2}} \\Upsilon^{\\frac{3-n}{2}} \\eta_{b} \\,, \\quad R = \\left\\{\\frac{c^{2}(n+1)}{4 \\pi G} \\right\\}^{\\frac{1}{2}} \\left(\\frac{K}{c^{2}} \\right)^{\\frac{n}{2}} \\Upsilon^{\\frac{1-n}{2}} \\xi_{b} \\,, \\quad \\mu = \\frac{2 \\Upsilon (n+1) \\eta_b}{\\xi_b} \\,.\n",
     "\\end{equation}\n",
@@ -231,19 +221,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Masa Total: 1.51, Radio Total: 9.97, Compacidad(μ): 0.48\n"
+      "Masa Total: 1.51 [M☉], Radio Total: 9.97 [km], Compacidad(μ): 0.48\n"
      ]
     }
    ],
    "source": [
-    "# Cálculo de la masa total en kilogramos\n",
+    "# Cálculo de la masa total en unidad de masa solar\n",
     "M = (c**(2)*(n+1)/(4*np.pi)**(1/3)/G)**(3/2)*(K/c**(2))**(n/2)*sigma**((3-n)/2)*Eta[-1]/Msun  # Masa en unidades de masa solar\n",
     "\n",
     "# Cálculo del radio total en kilómetros\n",
@@ -252,7 +242,7 @@
     "# Cálculo de la compacidad\n",
     "mr = (2*Upsilon*(n+1)*Eta/xi)[-1]\n",
     "\n",
-    "print(f'Masa Total: {M:.2f}, Radio Total: {R:.2f}, Compacidad(\\u03bc): {mr:.2f}')"
+    "print(f'Masa Total: {M:.2f} [M\\u2609], Radio Total: {R:.2f} [km], Compacidad(\\u03bc): {mr:.2f}')"
    ]
   },
   {
