--- a/Polítropa_Maestra/Polítropa Maestra - H-Z-N - Gráfica.ipynb
+++ b/Polítropa_Maestra/Polítropa Maestra - H-Z-N - Gráfica.ipynb
@@ -191,6 +191,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La masa total (en unidad de masa solar) y el radio total (en kilómetros) están dados por\n",
+    "\\begin{equation}\n",
+    "M = \\left\\{\\frac{c^{2}(n+1)}{(4 \\pi)^{\\frac{1}{3}} G} \\right\\}^{\\frac{3}{2}} \\left(\\frac{\\kappa}{c^{2}} \\right)^{\\frac{n}{2}} \\Upsilon^{\\frac{3-n}{2}} \\eta_{b} \\,, \\quad R = \\left\\{\\frac{c^{2}(n+1)}{4 \\pi G} \\right\\}^{\\frac{1}{2}} \\left(\\frac{\\kappa}{c^{2}} \\right)^{\\frac{n}{2}} \\Upsilon^{\\frac{1-n}{2}} \\xi_{b} \\,,\n",
+    "\\end{equation}\n",
+    "respectivamente."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
