Update Modelos (Masa total y Radio total).ipynb

--- a/Polítropa_Maestra/Modelos (Masa total y Radio total).ipynb
+++ b/Polítropa_Maestra/Modelos (Masa total y Radio total).ipynb
@@ -214,7 +214,7 @@
    "source": [
     "La masa total (en unidad de masa solar), el radio total (en kilómetros) y la compacidad en el borde están dados por\n",
     "\\begin{equation}\n",
-    "M = \\left\\{\\frac{c^{2}(n+1)}{(4 \\pi)^{\\frac{1}{3}} G} \\right\\}^{\\frac{3}{2}} \\left(\\frac{\\kappa}{c^{2}} \\right)^{\\frac{n}{2}} \\Upsilon^{\\frac{3-n}{2}} \\eta_{b} \\,, \\quad R = \\left\\{\\frac{c^{2}(n+1)}{4 \\pi G} \\right\\}^{\\frac{1}{2}} \\left(\\frac{\\kappa}{c^{2}} \\right)^{\\frac{n}{2}} \\Upsilon^{\\frac{1-n}{2}} \\xi_{b} \\,, \\quad \\mu = \\frac{2 \\Upsilon (n+1) \\eta_b}{\\xi_b} \\,.\n",
+    "M = \\left\\{\\frac{c^{2}(n+1)}{(4 \\pi)^{\\frac{1}{3}} G} \\right\\}^{\\frac{3}{2}} \\left(\\frac{\\kappa}{c^{2}} \\right)^{\\frac{n}{2}} \\Upsilon^{\\frac{3-n}{2}} \\eta_{b} \\,, \\quad R = \\left\\{\\frac{c^{2}(n+1)}{4 \\pi G} \\right\\}^{\\frac{1}{2}} \\left(\\frac{\\kappa}{c^{2}} \\right)^{\\frac{n}{2}} \\Upsilon^{\\frac{1-n}{2}} \\xi_{b} \\,, \\quad \\mu = \\frac{2 \\Upsilon (n+1) \\eta_b}{\\xi_b} \\,,\n",
     "\\end{equation}\n",
     "respectivamente."
    ]
