Update Polítropa Maestra (n) T.I.ipynb

--- a/Polítropa_Maestra/Polítropa Maestra (n) T.I.ipynb
+++ b/Polítropa_Maestra/Polítropa Maestra (n) T.I.ipynb
@@ -161,7 +161,7 @@
    "source": [
     "# Se definen los parámetros (de entrada) que caracterizan a cada modelo: n, C, alpha, varkappa, sigma\n",
     "\n",
-    "Lista_n = [0.5,0.8,1.5,2.0,2.5,3.0,3.5,4.0]        # Lista de índices polítropos n\n",
+    "Lista_n = [0.5,1.0,1.5,2.0,2.5,3.0,3.5,4.0]        # Lista de índices polítropos n\n",
     "print('Valores de n: ',end='')                                                    \n",
     "print(*Lista_n, sep=', ')\n",
     "\n",
@@ -204,9 +204,7 @@
     "for i in range(len(Lista_n)):\n",
     "    \n",
     "    n = Lista_n[i] # Índice polítropo n para cada modelo\n",
-    "    \n",
-    "    Parametros = [n,C,alpha,varkappa,sigma] # Parametros de cada modelo\n",
-    "    \n",
+    "        \n",
     "    # Cálculo de Upsilon\n",
     "    Upsilon = (sigma - alpha*(1 - varkappa))/(1 - varkappa**(1 + 1/n)) \n",
     "        \n",
@@ -252,7 +250,8 @@
     "    compacidad = 2*Upsilon*(n+1)*Eta/xi\n",
     "    \n",
     "### Condición C2\n",
-    "\n",
+    "    \n",
+    "    # Densidad de energía\n",
     "    Densidad = Psi**(n)\n",
     "    \n",
     "    # Presión entre presión central\n",
