Update Polítropa Maestra - H-Z-N - Gráfica.ipynb

--- a/Polítropa_Maestra/Polítropa Maestra - H-Z-N - Gráfica.ipynb
+++ b/Polítropa_Maestra/Polítropa Maestra - H-Z-N - Gráfica.ipynb
@@ -7,7 +7,7 @@
     "# Condiciones de aceptabilidad de modelos con polítropa Maestra\n",
     "## Condición C7: Criterio de estabilidad de Harrison-Zeldovich-Novikov \n",
     "\n",
-    "Este cuaderno muestra gráficamente, para distintos valores del índice polítropo $n$ y el factor de anisotropía $C$, el cumplimiento (o no) de la condición de estabilidad de Harrison-Zeldovich-Novikov, para modelos con ecuación de estado polítropa maestra.\n"
+    "Este cuaderno muestra gráficamente, para distintos valores del índice polítropo $n$ y del factor de anisotropía $C$, el cumplimiento (o no) de la condición de estabilidad de Harrison-Zeldovich-Novikov, para modelos con ecuación de estado polítropa maestra.\n"
    ]
   },
   {
@@ -300,6 +300,13 @@
    "source": [
     "LineStyles = ['solid', 'dotted', 'dashed', 'dashdot', (0,(1,10)), (0,(5,10)), (0,(3,10,1,10)), (0,(3,1,1,1,1,1)),\n",
     "              'dotted', 'dashed', 'dashdot', (0,(1,10)), (0,(5,10))]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## * Condición C7: $\\,\\, \\frac{\\mathrm{d}M(\\rho_{c})}{\\mathrm{d}\\rho_{c}} > 0$"
    ]
   },
   {
