Update Polítropa Maestra - Solución Numérica T.I..ipynb

--- a/Polítropa_Maestra/Polítropa Maestra - Solución Numérica T.I..ipynb
+++ b/Polítropa_Maestra/Polítropa Maestra - Solución Numérica T.I..ipynb
@@ -6,7 +6,10 @@
    "source": [
     "# Solución numérica de modelos con polítropa Maestra\n",
     "\n",
-    "Este cuaderno muestra gráficamente la solución numérica, para distintos valores del índice polítropo $n$, de esferas anisótropas relativistas con ecuación de estado polítropa maestra."
+    "Este cuaderno muestra gráficamente la solución numérica, para distintos valores del índice polítropo $n$, de esferas anisótropas relativistas con ecuación de estado polítropa maestra\n",
+    "\\begin{equation}\n",
+    "    P = \\kappa \\rho^{1+\\frac{1}{n}} + \\alpha \\rho - \\beta\n",
+    "\\end{equation}"
    ]
   },
   {
@@ -117,8 +120,8 @@
     "# Definiendo sistema de ecuaciones: derivada de Psi y derivada de Eta en función de xi\n",
     "def funciones(xi,y, alpha, n, h, Upsilon, varkappa):\n",
     "    psi_ , eta_ = y\n",
-    "    dydxi = [-h*(eta_ + xi**(3)*(Upsilon*(psi_**(n+1)-varkappa**(1+1/n)) + alpha*(psi_**(n) - varkappa)))*(1 + Upsilon*(psi_ - (varkappa**(1+1/n)/psi_**(n))) + alpha*(1 - (varkappa/psi_**(n))))/xi/(xi - 2*Upsilon*(n+1)*eta_) /(1 + alpha*n/Upsilon/(n+1)/psi_) \n",
-    "            ,xi**(2)*psi_**(n)] \n",
+    "    dydxi = [-h*(eta_ + xi**(3)*(Upsilon*(psi_**(n+1)-varkappa**(1+1/n)) + alpha*(psi_**(n) - varkappa)))*(1 + Upsilon*(psi_ - (varkappa**(1+1/n)/psi_**(n))) + alpha*(1 - (varkappa/psi_**(n))))/xi/(xi - 2*Upsilon*(n+1)*eta_) /(1 + alpha*n/Upsilon/(n+1)/psi_)\n",
+    "             ,xi**(2)*psi_**(n)] \n",
     "    return dydxi"
    ]
   },
@@ -238,7 +241,7 @@
     "    PTNorm = C*Upsilon*(n+1)*(Eta + xi**(3)*varP)*(Psi**(n) + varP)/sigma/(xi - 2*Upsilon*(n+1)*Eta) + varP/sigma\n",
     "    \n",
     "    # Masa adimensional normalizada\n",
-    "    m = Eta/Eta[-1] #(c**(2)*Upsilon*(n+1)/(4*np.pi*rho_c)**(1/3)/G)**(3/2)*Eta/Msun/m[-1]\n",
+    "    m = Eta/Eta[-1] \n",
     "           \n",
     "    # Función métrica e^-{2 lambda}    \n",
     "    e2lambda = (1 - 2*Upsilon*(n+1)*Eta/xi)\n",
