Update Polítropa Maestra (n) T.I.ipynb

--- a/Polítropa_Maestra/Polítropa Maestra (n) T.I.ipynb
+++ b/Polítropa_Maestra/Polítropa Maestra (n) T.I.ipynb
@@ -10,7 +10,7 @@
     "Este cuaderno muestra gráficamente, para distintos valores del índice polítropo $n$, el cumplimiento (o no) de condiciones de aceptabilidad física en esferas anisótropas relativistas con ecuación de estado polítropa maestra\n",
     "\\begin{equation}\n",
     "    P = \\kappa \\rho^{1+\\frac{1}{n}} + \\alpha \\rho - \\beta \\,.\n",
-    "\\end{equation}\n"
+    "\\end{equation}"
    ]
   },
   {
@@ -122,7 +122,7 @@
     "def funciones(xi,y, alpha, n, h, Upsilon, varkappa):\n",
     "    psi_ , eta_ = y\n",
     "    dydxi = [-h*(eta_ + xi**(3)*(Upsilon*(psi_**(n+1)-varkappa**(1+1/n)) + alpha*(psi_**(n) - varkappa)))*(1 + Upsilon*(psi_ - (varkappa**(1+1/n)/psi_**(n))) + alpha*(1 - (varkappa/psi_**(n))))/xi/(xi - 2*Upsilon*(n+1)*eta_) /(1 + alpha*n/Upsilon/(n+1)/psi_) \n",
-    "            ,xi**(2)*psi_**(n)] \n",
+    "             ,xi**(2)*psi_**(n)] \n",
     "    return dydxi"
    ]
   },
