--- a/Polítropa_II_(Densidad_de_Energía)/Polítropa II (n).ipynb
+++ b/Polítropa_II_(Densidad_de_Energía)/Polítropa II (n).ipynb
@@ -670,7 +670,7 @@
    "source": [
     "## * Condición C7: $\\,\\, \\frac{\\mathrm{d}M(\\rho_{c})}{\\mathrm{d}\\rho_{c}} > 0$\n",
     "\n",
-    "Esta condición requiere de la variación del parámetro $\\sigma$, por lo tanto se ha realizado aparte en [Condición C7](https://github.com/danielfsu/TrabajoDeInvestigacion/blob/main/Pol%C3%ADtropa_Maestra/Pol%C3%ADtropa%20Maestra%20-%20H-Z-N%20-%20Gr%C3%A1fica.ipynb)."
+    "Esta condición requiere de la variación del parámetro $\\sigma$, por lo tanto se ha realizado aparte en [Condición C7](https://github.com/danielfsu/TrabajoDeInvestigacion/blob/main/Pol%C3%ADtropa_II_%28Densidad_de_Energ%C3%ADa%29/Pol%C3%ADtropa%20II%20-%20C7.ipynb)."
    ]
   },
   {
