Update Polítropa I (sigma).ipynb

--- a/Polítropa_I_(Densidad_de_Masa)/Polítropa I (sigma).ipynb
+++ b/Polítropa_I_(Densidad_de_Masa)/Polítropa I (sigma).ipynb
@@ -670,7 +670,7 @@
    "source": [
     "## * Condición C7: $\\,\\, \\frac{\\mathrm{d}M(\\rho_{c})}{\\mathrm{d}\\rho_{c}} > 0$\n",
     "\n",
-    "Esta condición requiere de la variación del parámetro $\\sigma$, por lo tanto se ha realizado aparte en [Condición C7](https://github.com/danielfsu/TrabajoDeInvestigacion/blob/main/Pol%C3%ADtropa_Maestra/Pol%C3%ADtropa%20Maestra%20-%20H-Z-N%20-%20Gr%C3%A1fica.ipynb)."
+    "Esta condición requiere de la variación del parámetro $\\sigma$, por lo tanto se ha realizado aparte en [Condición C7](https://github.com/danielfsu/TrabajoDeInvestigacion/blob/main/Pol%C3%ADtropa_I_%28Densidad_de_Masa%29/Pol%C3%ADtropa%20I%20-%20C7.ipynb)."
    ]
   },
   {
