Update Polítropa Maestra - C7.ipynb

--- a/Polítropa_Maestra/Polítropa Maestra - C7.ipynb
+++ b/Polítropa_Maestra/Polítropa Maestra - C7.ipynb
@@ -5,11 +5,12 @@
    "metadata": {},
    "source": [
     "# Condiciones de aceptabilidad de modelos con polítropa Maestra\n",
-    "## Condición C7: Criterio de estabilidad de Harrison-Zeldovich-Novikov \n",
+    "\n",
+    "## Condición C7: Criterio de estabildiad de Harrison-Zeldovich-Novikov \n",
     "\n",
     "Este cuaderno muestra gráficamente, para distintos valores del índice polítropo $n$ y del factor de anisotropía $C$, el cumplimiento (o no) de la condición de estabilidad de Harrison-Zeldovich-Novikov, para modelos con ecuación de estado polítropa maestra\n",
     "\\begin{equation}\n",
-    "    P = \\kappa \\rho^{1 + \\frac{1}{n}} + \\alpha \\rho - \\beta\n",
+    "    P = \\kappa \\rho^{1+\\frac{1}{n}} + \\alpha \\rho - \\beta \\,.\n",
     "\\end{equation}"
    ]
   },
