--- a/Polítropa_Maestra/Polítropa Maestra - Validación T.I..ipynb
+++ b/Polítropa_Maestra/Polítropa Maestra - Validación T.I..ipynb
@@ -202,7 +202,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1.1 s\n"
+      "Wall time: 540 ms\n"
      ]
     }
    ],
